# sigtool

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
sigtool/: filter.py  signal.py  transform.py
tests/: test_signal.py  test_transform.py
