[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigtool"
version = "0.1.0"
description = "A lightweight digital signal processing toolkit in Python"
authors = [{name = "Charlie Giese", email = "cmggiese@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
